i have add gitfile link in all kustomization file

--- a/local/boldbi/kustomization.yaml
+++ b/local/boldbi/kustomization.yaml
@@ -2,7 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: bold-services
 resources:
-  - ../boldbi-manifest
+  - https://raw.githubusercontent.com/sivakumar-devops/kustomization-improvement/main/manifest/boldbi/namespace.yaml
+  - https://raw.githubusercontent.com/sivakumar-devops/kustomization-improvement/main/manifest/boldbi/configuration/log4net_config.yaml
+  - https://raw.githubusercontent.com/sivakumar-devops/kustomization-improvement/main/manifest/boldbi/configuration/pvclaim_onpremise.yaml
+  - https://raw.githubusercontent.com/sivakumar-devops/kustomization-improvement/main/manifest/boldbi/service.yaml
+  #- hpa
+  - https://raw.githubusercontent.com/sivakumar-devops/kustomization-improvement/main/manifest/boldbi/deployment.yaml
+  - https://raw.githubusercontent.com/sivakumar-devops/kustomization-improvement/main/manifest/boldbi/configuration/boldbi-ingress.yaml
 
 #Enter Your App-data Mount path
 patches:
